mise à jour sujets.md

--- a/site/sujets/index.html
+++ b/site/sujets/index.html
@@ -2310,7 +2310,7 @@
 <li>Type de données, conversions des entrées vers <code>int</code> ou <code>float</code></li>
 <li>Importation de modules (<code>math</code>, <code>random</code>)</li>
 <li>Notes de cours : section 1.3</li>
-<li>Livre : sections 2.0, 2.1, 3.0, 3.1. 3.2</li>
+<li>Livre : sections 2.0, 2.1, 3.0, 3.1, 3.2</li>
 </ol>
 </li>
 <li>Semaine 3<ol type="1">
@@ -2330,6 +2330,7 @@
 </ol>
 </li>
 <li>Semaine 6</li>
+<li>Examen 1</li>
 <li>Semaine 7</li>
 <li>Semaine 8</li>
 <li>Semaine 9</li>
